---
source: reflectapi-demo/src/tests/generics.rs
expression: "super::into_input_schema::<TestStructWithVecGenericGenericGeneric<Vec<u8>>>().input_types"
---
{
  "types": [
    {
      "kind": "struct",
      "name": "reflectapi::Empty",
      "description": "Struct object with no fields"
    },
    {
      "kind": "struct",
      "name": "reflectapi_demo::tests::generics::TestStructWithVecGeneric",
      "parameters": [
        {
          "name": "T"
        }
      ],
      "fields": [
        {
          "name": "_f",
          "type": {
            "name": "std::vec::Vec",
            "parameters": [
              {
                "name": "T"
              }
            ]
          },
          "required": true
        }
      ]
    },
    {
      "kind": "struct",
      "name": "reflectapi_demo::tests::generics::TestStructWithVecGenericGenericGeneric",
      "parameters": [
        {
          "name": "T"
        }
      ],
      "fields": [
        {
          "name": "_f",
          "type": {
            "name": "std::vec::Vec",
            "parameters": [
              {
                "name": "reflectapi_demo::tests::generics::TestStructWithVecGeneric",
                "parameters": [
                  {
                    "name": "T"
                  }
                ]
              }
            ]
          },
          "required": true
        }
      ]
    },
    {
      "kind": "primitive",
      "name": "std::vec::Vec",
      "description": "Expandable array type",
      "parameters": [
        {
          "name": "T"
        }
      ]
    },
    {
      "kind": "primitive",
      "name": "u8",
      "description": "8-bit unsigned integer"
    }
  ]
}
